--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ss-coffee",
   "author": "Owen Barnes <owen@socketstream.org>",
   "description": "CoffeeScript wrapper for SocketStream 0.3",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./lib/wrapper.js",
   "repository": {
-    "url": ""
+    "type" : "git",
+    "url": "https://github.com/socketstream/ss-coffee.git"
   },
   "engines": {
     "node": ">= 0.6.0"
