--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "ss-coffee",
   "author": "Owen Barnes <owen@socketstream.org>",
   "description": "CoffeeScript wrapper for SocketStream 0.3",
-  "version": "0.1.1",
-  "main": "./lib/wrapper.js",
+  "version": "0.1.2",
+  "main": "./wrapper.js",
   "repository": {
     "type" : "git",
     "url": "https://github.com/socketstream/ss-coffee.git"
@@ -12,7 +12,7 @@
     "node": ">= 0.6.0"
   },
   "dependencies": {
-    "coffee-script": "1.2.x"
+    "coffee-script": "1.3.x"
   },
   "devDependencies": {}
 }
