--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "url": "https://github.com/socketstream/ss-coffee.git"
   },
   "engines": {
-    "node": ">= 0.6.0"
+    "node": ">= 0.10.32"
   },
   "dependencies": {
-    "coffee-script": "1.3.x"
+    "coffee-script": "1.9.0"
   },
   "devDependencies": {}
 }
