--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "version": "0.1.2",
   "main": "./wrapper.js",
   "repository": {
-    "type" : "git",
+    "type": "git",
     "url": "https://github.com/socketstream/ss-coffee.git"
   },
   "engines": {
     "node": ">= 0.10.32"
   },
   "dependencies": {
-    "coffee-script": "1.9.1"
+    "coffeescript": "^2.4.1"
   },
   "devDependencies": {}
 }
